syntax = "proto3";

package proto;

option csharp_namespace = "DysonNetwork.Shared.Proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "file.proto";
import "publisher.proto";

enum LiveStreamType {
  LIVE_STREAM_TYPE_UNSPECIFIED = 0;
  REGULAR = 1;
  INTERACTIVE = 2;
}

enum LiveStreamVisibility {
  LIVE_STREAM_VISIBILITY_UNSPECIFIED = 0;
  PUBLIC = 1;
  UNLISTED = 2;
  PRIVATE = 3;
}

enum LiveStreamStatus {
  LIVE_STREAM_STATUS_UNSPECIFIED = 0;
  PENDING = 1;
  ACTIVE = 2;
  ENDED = 3;
  ERROR = 4;
}

message LiveStream {
  string id = 1;
  string title = 2;
  string description = 3;
  string slug = 4;
  LiveStreamType type = 5;
  LiveStreamVisibility visibility = 6;
  LiveStreamStatus status = 7;
  string room_name = 8;
  string ingress_id = 9;
  string ingress_stream_key = 10;
  string egress_id = 11;
  google.protobuf.Timestamp started_at = 12;
  google.protobuf.Timestamp ended_at = 13;
  int32 viewer_count = 14;
  int32 peak_viewer_count = 15;
  CloudFile thumbnail = 16;
  bytes metadata = 17;
  string publisher_id = 18;
  Publisher publisher = 19;
  google.protobuf.Timestamp created_at = 20;
  google.protobuf.Timestamp updated_at = 21;
  google.protobuf.Timestamp deleted_at = 22;
}
